# markupt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  markdown-viewer-spec.md
packaging/: PKGBUILD
resources/: io.markupt.markdownviewer.desktop
src/: CodeHighlighter.cpp  CodeHighlighter.h  DebugTiming.cpp  DebugTiming.h  MainWindow.cpp  MainWindow.h  MarkdownRenderer.cpp  MarkdownRenderer.h  MarkdownTab.cpp  MarkdownTab.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h  main.cpp
testdata/: gfm-coverage.md  highlight-multi-lang.md  highlight-multiline-comment.md  perf-bigfile.md
